# hlibpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  apprx.cc  logger.hh  reduction.cc  server.cc  simulation.cc  trace_file.hh
examples/data/: label_trace_1000.txt
src/: CMakeLists.txt  dtmc.cc  dtmc.hh  hmm.cc  hmm.hh  label_trace.hh  labelled_dtmc.cc  labelled_dtmc.hh  markov.hh  markov_random.cc  markov_random.hh  my_thread_pool.h  trace.hh
tests/: CMakeLists.txt  test_my_thread_pool.cc
